feat(backend): 🐘 migrate from Supabase to PostgreSQL vectors
- Remove Supabase dependencies and config
- Add spring-boot-starter-jdbc and org.postgresql:postgresql
- Update schema.sql to enable pgvector and create documents table
- Refactor ChatHandler to search PostgreSQL using JDBC and pgvector cosine distance

--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     // Database
     runtimeOnly 'com.h2database:h2'              // local dev
     runtimeOnly 'org.postgresql:postgresql'        // production (Render)
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc' // For JdbcTemplate vector search
 
     // Actuator (health checks for Render)
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
