fix(deploy): 🛠️ correct Render & Docker configuration
- Move render.yaml to repo root for Render discovery
- Update Dockerfile to build from single repro context
- Update build.gradle to use GitHub Packages for framework dependency
- Update settings.gradle to conditionally include local build

--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,13 @@ repositories {
     mavenLocal()
     mavenCentral()
     maven { url 'https://repo.spring.io/milestone' }
+    maven {
+        url = uri("https://maven.pkg.github.com/hungpt99-dev/fast-framework")
+        credentials {
+            username = System.getenv("GITHUB_USERNAME") ?: "hungpt99-dev"
+            password = System.getenv("GITHUB_TOKEN")
+        }
+    }
 }
 
 dependencyManagement {
