--- a/render.yaml
+++ b/render.yaml
@@ -34,6 +34,20 @@ services:
         fromDatabase:
           name: chatme-db
           property: password
+      - key: DB_HOST
+        fromDatabase:
+          name: chatme-db
+          property: host
+      - key: DB_PORT
+        fromDatabase:
+          name: chatme-db
+          property: port
+      - key: DB_NAME
+        fromDatabase:
+          name: chatme-db
+          property: database
+      - key: SPRING_DATASOURCE_URL
+        value: jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
       # OpenAI
       - key: OPENAI_API_KEY
         sync: false
