--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,17 +23,17 @@ spring:
       mode: always
       schema-locations: classpath:schema.sql
 
-  # Spring AI - OpenAI
+  # Spring AI - Google Gemini
   ai:
-    openai:
-      api-key: ${OPENAI_API_KEY:your-openai-api-key-here}
+    gemini:
+      api-key: ${GEMINI_API_KEY}
       chat:
         options:
-          model: gpt-4.1-nano
+          model: gemini-1.5-flash
           temperature: 0.7
       embedding:
         options:
-          model: text-embedding-3-small
+          model: text-embedding-004
 
 # Application-specific config
 app:
