--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,6 +33,7 @@ spring:
           options:
             temperature: 0.7
         embedding:
+          enabled: true
           model: text-embedding-004
 
 # Application-specific config
