chore: migrate to flyway and refactor blog posts to db

--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,8 @@ dependencies {
     // Database
     runtimeOnly 'com.h2database:h2'              // local dev
     runtimeOnly 'org.postgresql:postgresql'        // production (Render)
+    implementation 'org.flywaydb:flyway-core'
+    implementation 'org.flywaydb:flyway-database-postgresql'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc' // For JdbcTemplate vector search
 
     // Actuator (health checks for Render)
