feat: add Spring Security with Supabase JWT authentication for admin endpoints
- Add spring-boot-starter-security and oauth2-resource-server dependencies
- Add SecurityConfig protecting /api/admin/** with JWT authentication
- Keep all public endpoints (/api/blog/**, /api/questions/**, etc.) open
- Update CorsConfig with CorsConfigurationSource bean for Spring Security
- Add Supabase JWKS and issuer URI configuration
- Allow CORS from both :3000 and :3001 origins

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -45,7 +45,13 @@ app:
     max-tokens: 10
     refill-per-second: 1
   cors:
-    allowed-origins: ${CORS_ORIGINS:http://localhost:3000}
+    allowed-origins: ${CORS_ORIGINS:http://localhost:3000,http://localhost:3001}
+  supabase:
+    url: ${SUPABASE_URL:https://your-project.supabase.co}
+    jwt-secret: ${SUPABASE_JWT_SECRET:}
+
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri: ${SUPABASE_URL:https://your-project.supabase.co}/auth/v1/.well-known/jwks.json
+spring.security.oauth2.resourceserver.jwt.issuer-uri: ${SUPABASE_URL:https://your-project.supabase.co}/auth/v1
 
 # Actuator for health checks
 management:
