--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+    // Spring Security + OAuth2 Resource Server (JWT validation)
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
+
     // Spring AI - Google AI Gemini (API Key based)
     implementation 'org.springframework.ai:spring-ai-starter-model-google-genai'
     // Explicit embedding support (if not in starter-model)
